syntax = "proto3";

package message;

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/awakari/router/api/grpc/message";

message Message {
  string id = 1;
  map<string, AttrValue> metadata = 2;
  oneof data {
    bytes binary_data = 3;
    string text_data = 4;
    google.protobuf.Any proto_data = 5;
  }
}

message AttrValue {
  oneof attr {
    bool ce_boolean = 1;
    int32 ce_integer = 2;
    string ce_string = 3;
    bytes ce_bytes = 4;
    string ce_uri = 5;
    string ce_uri_ref = 6;
    google.protobuf.Timestamp ce_timestamp = 7;
  }
}